# iiiedu

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  uwsgi.ini
apps/iiiedu/: admin.py  apps.py  models.py  urls.py  views.py
apps/iiiedu/management/commands/: ingest_data.py
apps/iiiedu/migrations/: 0001_initial.py
config/: settings.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  production.py
src/: gcloud.py
static/css/: rate.css  semantic.css
static/data/iiiedu/: chart_data.json
templates/: base.html  search.html  test.html
templates/chert/: index.html
templates/course/: index.html
templates/series/: index.html
templates/theme/: index.html
