[project]
name = "iiiedu"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "asgiref>=3.7.2",
    "django>=3.2.23",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-filter>=23.5",
    "djangorestframework>=3.14.0",
    "idna>=3.6",
    "libcst>=1.1.0",
    "mypy-extensions>=1.0.0",
    "numpy>=1.26.2",
    "pandas>=2.1.3",
    "openpyxl>=3.1.5",
    "packaging>=23.2",
    "pillow>=10.1.0",
    "pyasn1>=0.5.1",
    "pyasn1-modules>=0.3.0",
    "pymongo>=4.6.1",
    "pyparsing>=3.1.1",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3.post1",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "rsa>=4.9",
    "six>=1.16.0",
    "sqlparse>=0.4.4",
    "typing-extensions>=4.9.0",
    "typing-inspect>=0.9.0",
    "urllib3>=2.1.0",
    "python-dotenv>=1.2.1",
    "gunicorn>=25.1.0",
]
